Trying to fix header on iOS

--- a/css/main.css
+++ b/css/main.css
@@ -45,12 +45,12 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
-html, body {
-  overflow-x: hidden;
-  overflow-y: scroll; }
-
 html {
-  font-size: 16px; }
+  font-size: 16px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none; }
 
 body {
   font-family: 'Roboto', sans-serif; }
@@ -396,6 +396,7 @@ body {
   height: 60px;
   position: fixed;
   top: 0;
+  left: 0;
   background: #191747;
   z-index: 1000;
   box-shadow: 0px 3px 5px 0px rgba(50, 50, 50, 0.5); }
